# dictator

./: .gitignore  Cargo.toml  PLAN.md  README.md  default_config.toml
.claude/: settings.local.json
src/: audio.rs  config.rs  hotkey.rs  main.rs  paste.rs  sounds.rs  transcribe.rs  tray.rs
